--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Website</h1>
+        <h1>zombie shit</h1>
         <p>This is a simple website hosted on GitHub Pages!</p>
     </header>
     <main>
