--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <header>
-        <h1>zombie shit</h1>
+        <h1>Zombie Project</h1>
         <p>This is a simple website hosted on GitHub Pages!</p>
     </header>
     <main>
         <section>
-            <h2>About Me</h2>
-            <p>Here you can add information about yourself.</p>
+            <h2>About Our Plan To Escape</h2>
+            <p>Our plan to escape from the zombies is to steal a plane and go to a remote island</p>
         </section>
         <section>
             <h2>Projects</h2>
