--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <section>
             <h2>About Our Plan To Escape</h2>
             <p>Our plan to escape from the zombies is to steal a plane and go to a remote island</p>
+               <img src="zombie.jpg" alt="Image" style="max-width: 100%; height: auto;">
         </section>
         <section>
             <h2>Projects</h2>
