--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main>
         <section>
             <h2>About Our Plan To Escape</h2>
-            <p>Our plan to escape from the zombies is to steal a plane and go to a remote island</p>
+            <p>Our plan to escape from the zombies is to steal a plane and go to dubai in unied arab emirates</p>
                <img src="zombie.jpg" alt="Image" style="max-width: 100%; height: auto;">
         </section>
         <section>
