--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub Page</title>
+    <title>Zombie Project</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <h1>Zombie Project</h1>
-        <p>This is a simple website hosted on GitHub Pages!</p>
+        <p>Our Site</p>
     </header>
     <main>
         <section>
-            <h2>About Our Plan To Escape</h2>
-            <p>Our plan to escape from the zombies is to steal a plane and go to dubai in unied arab emirates</p>
+            <h2>About Our Site</h2>
+            <p>Our site is located in Dubai (which is in the United Arab Emirates) in a the Emirates National Bank of Dubai Vault</p>
             
         </section>
         <section>
