--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </section>
     </main>
     <footer>
-        <p>© 2024 My Name</p>
+        <p>© 2024 Jacob Lopez</p>
     </footer>
 </body>
 </html>
