--- a/index.html
+++ b/index.html
@@ -18,12 +18,23 @@
             
         </section>
         <section>
+            <h2>Directions to safehouse</h2>
+            <p>In order to get our safehouse, You must first go to Dubai. From there go to the Emirates National Bank of Dubai And knock (Code is Knock *pause* Knock Knock *pause* Knock )</p>
+        </section>
+        <section>
             <h2>Projects</h2>
-            <p>List your projects or anything else you want to showcase here.</p>
+            <p>Our Safesite is the best as we currently have water, food with plants still growing, and power to have light and other essentials running like lights and refrigerators to keep our meat frozen.
+            We are also located in one of the richest cities in the world so we have plenty of stores to go. </p>
+        </section>
+        <section>
+            <h2>Types of people we are accepting</h2>
+            <p>We are currently accepting all except people who cause trouble, zombies, and people who are dependent on others* (etc. elderly and infants).
+            
+            *Dependants are allowed if they have someone to assist them. NO ALONE DEPENDENTS</p>
         </section>
     </main>
     <footer>
-        <p>© 2024 Jacob Lopez</p>
+        <p>© 2024 Jacob Lopez Group 5</p>
     </footer>
 </body>
 </html>
