--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main>
         <section>
             <h2>About Our Site</h2>
-            <p>Our site is located in Dubai (which is in the United Arab Emirates) in a the Emirates National Bank of Dubai Vault</p>
+            <p>Our site is located in Dubai (which is in the United Arab Emirates) in the Emirates National Bank of Dubai Vault</p>
             
         </section>
         <section>
@@ -23,7 +23,7 @@
         </section>
         <section>
             <h2>Projects</h2>
-            <p>Our Safesite is the best as we currently have water, food with plants still growing, and power to have light and other essentials running like lights and refrigerators to keep our meat frozen.<br>
+            <p>Our Safesite is the best as we currently have water, food with plants still growing, and power to have lights and other essentials running like refrigerators to keep our meat frozen.<br>
             We are also located in one of the richest cities in the world so we have plenty of stores to go. </p>
         </section>
         <section>
@@ -42,14 +42,14 @@
             </section>
         <section>
             <h2>Vegetation and climate</h2>
-            <p>At the moment we only have some basic vegetation like Tomatoes, Carrots, Squash, and Cucumbers.<br> 
+            <p>At the moment, we only have some basic vegetation like Tomatoes, Carrots, Squash, and Cucumbers.<br> 
             Our current climate is a tropical desert(Hot and Humid)*<br>
             <br>
             *We have A/C in our safehouse</p>
         </section>
     </main>
     <footer>
-        <p>© 2024 Jacob Lopez Group 5</p>
+        <p>© 2024 Jacob Lopez Group 5 Bank Dwellers</p>
     </footer>
 </body>
 </html>
